public/main.css
/* ... */
.cssload-thecube .cssload-c3 {
    transform: scale(1.1) rotateZ(180deg);
    -o-transform: scale(1.1) rotateZ(180deg);
    -ms-transform: scale(1.1) rotateZ(180deg);
    -webkit-transform: scale(1.1) rotateZ(180deg);
    -moz-transform: scale(1.1) rotateZ(180deg);
}

.cssload-thecube .cssload-c4 {
    transform: scale(1.1) rotateZ(270deg);
    -o-transform: scale(1.1) rotateZ(270deg);
    -ms-transform: scale(1.1) rotateZ(270deg);
    -webkit-transform: scale(1.1) rotateZ(270deg);
    -moz-transform: scale(1.1) rotateZ(270deg);
}

.cssload-thecube .cssload-c2:before {
    animation-delay: 0.35s;
    -o-animation-delay: 0.35s;
    -ms-animation-delay: 0.35s;
    -webkit-animation-delay: 0.35s;
    -moz-animation-delay: 0.35s;
}

.cssload-thecube .cssload-c3:before {
    animation-delay: 0.69s;
    -o-animation-delay: 0.69s;
    -ms-animation-delay: 0.69s;
    -webkit-animation-delay: 0.69s;
    -moz-animation-delay: 0.69s;
}

.cssload-thecube .cssload-c4:before {
    animation-delay: 1.04s;
    -o-animation-delay: 1.04s;
    -ms-animation-delay: 1.04s;
    -webkit-animation-delay: 1.04s;
    -moz-animation-delay: 1.04s;
}

@keyframes cssload-fold-thecube {
    0%, 10% {
        transform: perspective(136px) rotateX(-180deg);
        opacity: 0;
    }
    25%,
    75% {
        transform: perspective(136px) rotateX(0deg);
        opacity: 1;
    }
    90%,
    100% {
        transform: perspective(136px) rotateY(180deg);
        opacity: 0;
    }
}

@-o-keyframes cssload-fold-thecube {
    0%, 10% {
        -o-transform: perspective(136px) rotateX(-180deg);
        opacity: 0;
    }
    25%,
    75% {
        -o-transform: perspective(136px) rotateX(0deg);
        opacity: 1;
    }
    90%,
    100% {
        -o-transform: perspective(136px) rotateY(180deg);
        opacity: 0;
    }
}

@-ms-keyframes cssload-fold-thecube {
    0%, 10% {
        -ms-transform: perspective(136px) rotateX(-180deg);
        opacity: 0;
    }
    25%,
    75% {
        -ms-transform: perspective(136px) rotateX(0deg);
        opacity: 1;
    }
    90%,
    100% {
        -ms-transform: perspective(136px) rotateY(180deg);
        opacity: 0;
    }
}

@-webkit-keyframes cssload-fold-thecube {
    0%, 10% {
        -webkit-transform: perspective(136px) rotateX(-180deg);
        opacity: 0;
    }
    25%,
    75% {
        -webkit-transform: perspective(136px) rotateX(0deg);
        opacity: 1;
    }
    90%,
    100% {
        -webkit-transform: perspective(136px) rotateY(180deg);
        opacity: 0;
    }
}

@-moz-keyframes cssload-fold-thecube {
    0%, 10% {
        -moz-transform: perspective(136px) rotateX(-180deg);
        opacity: 0;
    }
    25%,
    75% {
        -moz-transform: perspective(136px) rotateX(0deg);
        opacity: 1;
    }
    90%,
    100% {
        -moz-transform: perspective(136px) rotateY(180deg);
        opacity: 0;
    }
}

.clickable {
    cursor: pointer;
}

.loader-hidden {
    display: none;
}

.loader-active {
    display: block;
}

/* The default background color is #c00 */
.github-fork-ribbon.right-bottom:before {
    background-color: #090;
}

/*Tablet specific*/
@media (max-width: 1024px) {
    #splash {
        background-image: url("../static/img/background_tablet.jpg"), url("./static/img/background_tablet.jpg");
    }

    #about .content, #howto .content {
        padding: 48px 120px;
        margin: auto;
        max-width: 500px;
    }

    #about-button {
        top: 36px;
        right: 36px;
    }

    #about-xbutton {
        top: 36px;
        right: 36px;
    }

    #main-container #title-group .title_bold {
        font-size: 67px;
        font-weight: 700;
        font-style: normal;

        font-stretch: normal;
        font-variant-caps: normal;
        font-variant-ligatures: normal;
        font-variant-numeric: normal;
    }

    #main-container #title-group .title_regular {
        font-size: 36px;
        margin-top: 12px;
        font-weight: 400;
    }
}

/*Mobile specific*/
@media (max-width: 768px) {
    #about .content, #howto .content {
        padding: 0 60px;
        margin: auto;
        max-width: none;
    }

    #about .content .about-head {
        padding-top: 28px;
    }

    #about .content .description {
        padding-bottom: 28px;
    }

    #howto .content .description {
        padding-top: 28px;
        padding-bottom: 28px;
    }

    #main-container #title-group .title_bold {
        font-size: 42px;
        font-weight: 700;
        font-style: normal;

        font-stretch: normal;
        font-variant-caps: normal;
        font-variant-ligatures: normal;
        font-variant-numeric: normal;
    }

    #main-container #title-group .title_regular {
        font-size: 24px;
        margin-top: 12px;
        font-weight: 400;
    }

    #main-container #title-group {
        padding-top: 10%;
    }

    #polidea-info-container {
        margin: 23px 0 0 23px;
        height: 36px;
        width: 94px;
        background-color: rgba(255, 255, 255, 0.8);
    }

    #enter-container {
        bottom: 20%;
    }

    #about-button {
        top: 23px;
        right: 23px;
    }

    #about #about-xbutton, #howto #about-xbutton {
        top: 24px;
        right: 24px;
    }

    .white-box {
        padding: 5px;
        font-size: 20px;
        max-width: 160px;
    }

}
/* ... */

